--- a/css/style_kreiraj.css
+++ b/css/style_kreiraj.css
@@ -1,34 +1,113 @@
-
-#forma{
-  
-  font-size: 18px;
-  background-color: lightgreen;
-  width: auto;  
-  
-
+*{
+  box-sizing: border-box;
 }
 
-#formular{
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-#flajer{
-  background-color: lightpink;
-  width: auto;
-  height: 700px;
-
-}
-
-#tabela tr td{
-  padding: 3px 5px;
-}
 
 #container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
+  background-image: url("../img/clouds.jpg");
+  background-repeat: no-repeat;
+  height: auto; 
+  overflow-wrap: break-word;
+  min-height: 100%;
+
+  position:fixed;
+  padding:0;
+  margin:0;
+  width: 100%;
+  top:0;
+  left:0;
+
+  }
+
+.header{
+  height: 100px;
+}  
+
+#forma{
+  
+  font-size: 18px;
+  /* background-color: lightgreen; */
+  width: auto;
+  height: 90%; 
+  display: inline-block;
+  border: 1px solid black;
+  text-align: center;
+  margin-top: 30px;
+  
 }
+
+#formular{
+  
+  margin-left: 20px;
+  margin-right: 20px;
+  text-align: center;
+}
+
+#flajer{
+  
+  width: auto;
+  height: 100%;
+  display: none;
+  background-image: url(../img/fback5.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 16px;
+  text-shadow: 3px 2px 2px gray;
+  color: black;
+  border: 3px solid blue; 
+  overflow-wrap: break-word; 
+  margin-top: 30px;
+
+}
+
+#dugme_flajer{
+  /* display: inline-block; */
+  width: 200px;
+  height: 50px;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: 4px 4px 3px gray;
+  margin: 10px;
+
+  
+}
+
+#container_img{
+  position: relative;
+  
+  height: 300px;
+}
+
+#slika_flajer{
+  width: 80%;
+  height: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  box-shadow: 7px 7px 6px rgb(77, 72, 72);
+}  
+  
+
+#tabela{
+  width: 100%;
+  
+}
+
+
+#tabela tr td{
+  padding: 12px 15px;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-weight: bolder;  
+  max-width: 300px;
+  word-wrap:break-word;
+  
+}
+
+
 
 textarea {
   width: 80%;
@@ -41,9 +120,9 @@ textarea {
   resize: none;
 }
 #greska {
-  color: rgb(133, 4, 4);
-  text-shadow: 2px 2px 2px;
-  font-size: 24px;
+  color: red;
+  text-shadow: 1px 1px 2px;
+  font-size: 18px;
 }
 #naziv_dogadjaja {
   margin-right: 0;
@@ -56,9 +135,7 @@ textarea {
 #lok{
   display: none;
 }
-#flajer{
-  visibility: hidden;
-}
+
 #animacija{
   width: 100%;
   height: 150px;
