--- a/css/style_kreiraj.css
+++ b/css/style_kreiraj.css
@@ -11,6 +11,7 @@
   background-repeat: no-repeat;
   height: auto; 
   overflow-wrap: break-word;
+  
   min-height: 100%;
 
   position:fixed;
@@ -48,7 +49,7 @@
 
 #flajer{
   
-  width: auto;
+  width: 450px;
   height: 100%;
   display: none;
   background-image: url(../img/fback5.jpg);
@@ -63,21 +64,59 @@
 
 }
 
+#flajer_n{
+  
+  width: 450px;
+  height: 100%;
+  display: none;
+  background-image: url(../img/fback1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 16px;
+  text-shadow: 3px 2px 2px gray;
+  color: black;
+  border: 3px solid blue; 
+  overflow-wrap: break-word; 
+  margin-top: 30px;
+
+}
+
 #dugme_flajer{
-  /* display: inline-block; */
+  
   width: 200px;
   height: 50px;
   font-size: 16px;
   font-weight: bold;
   box-shadow: 4px 4px 3px gray;
   margin: 10px;
-
-  
 }
+
+#dugme_raniji{
+
+    width: 150px;
+    height: 50px;
+    font-size: 12px;
+    font-weight: bold;
+    box-shadow: 4px 4px 3px gray;
+    margin: 10px;
+    display: none;
+    position: absolute;
+    top: 300px;
+    left: 550px;
+    /* border: 2px solid green; */
+    background-color: cornsilk;
+    text-shadow: 1px 1px 2px green;
+  }
+  
+
 
 #container_img{
   position: relative;
-  
+  height: 300px;
+}
+
+#container_img_n{
+  position: relative;
   height: 300px;
 }
 
@@ -89,10 +128,27 @@
   left: 50%;
   transform: translate(-50%,-50%);
   box-shadow: 7px 7px 6px rgb(77, 72, 72);
+  border: 1px solid black;
+}  
+
+#slika_flajer_n{
+  width: 80%;
+  height: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  box-shadow: 7px 7px 6px rgb(77, 72, 72);
+  border: 1px solid black;
 }  
   
 
 #tabela{
+  width: 100%;
+  
+}
+
+#tabela_n{
   width: 100%;
   
 }
@@ -107,7 +163,14 @@
   
 }
 
-
+#tabela_n tr td{
+  padding: 12px 15px;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-weight: bolder;  
+  max-width: 300px;
+  word-wrap:break-word;
+  
+}
 
 textarea {
   width: 80%;
