--- a/css/style_kreiraj.css
+++ b/css/style_kreiraj.css
@@ -2,19 +2,24 @@
   box-sizing: border-box;
 }
 
+body{
+  background-image: url("../img/clouds.jpg");
+  background-repeat: no-repeat;
+}
 
 #container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  background-image: url("../img/clouds.jpg");
+  /* background-image: url("../img/clouds.jpg"); */
   background-repeat: no-repeat;
   height: auto; 
   overflow-wrap: break-word;
-  
-  min-height: 100%;
 
-  position:fixed;
+  height: auto;
+  
+
+  
   padding:0;
   margin:0;
   width: 100%;
@@ -32,7 +37,7 @@
   font-size: 18px;
   /* background-color: lightgreen; */
   width: auto;
-  height: 90%; 
+  height: 100%; 
   display: inline-block;
   border: 1px solid black;
   text-align: center;
@@ -47,12 +52,33 @@
   text-align: center;
 }
 
+#dugme{
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+#za_lok{
+  visibility: hidden;
+    width: 200px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    letter-spacing: 1px;
+    font-size: 14px;
+  
+}
+
 #flajer{
   
   width: 450px;
   height: 100%;
   display: none;
-  background-image: url(../img/fback5.jpg);
+  background-image: url("../img/fback16.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   font-size: 16px;
@@ -69,7 +95,7 @@
   width: 450px;
   height: 100%;
   display: none;
-  background-image: url(../img/fback1.jpg);
+  background-image: url("../img/fback15.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   font-size: 16px;
@@ -84,7 +110,7 @@
 #dugme_flajer{
   
   width: 200px;
-  height: 50px;
+  height: 45px;
   font-size: 16px;
   font-weight: bold;
   box-shadow: 4px 4px 3px gray;
@@ -102,13 +128,15 @@
     display: none;
     position: absolute;
     top: 300px;
-    left: 550px;
+    left: 700px;
     /* border: 2px solid green; */
     background-color: cornsilk;
     text-shadow: 1px 1px 2px green;
+    z-index: 100;
   }
-  
-
+  #dugme_raniji:hover{
+    cursor: grab;
+  }
 
 #container_img{
   position: relative;
@@ -174,7 +202,7 @@
 
 textarea {
   width: 80%;
-  height: 100px;
+  height: 90px;
   padding: 6px 10px;
   box-sizing: border-box;
   border: 2px solid #ccc;
