--- a/css/style_kreiraj.css
+++ b/css/style_kreiraj.css
@@ -11,37 +11,26 @@ body{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  /* background-image: url("../img/clouds.jpg"); */
   background-repeat: no-repeat;
   height: auto; 
   overflow-wrap: break-word;
-
   height: auto;
-  
-
-  
-  padding:0;
-  margin:0;
-  width: 100%;
-  top:0;
-  left:0;
-
-  }
+}
 
 .header{
-  height: 100px;
+  height: 20px;
 }  
 
 #forma{
   
   font-size: 18px;
-  /* background-color: lightgreen; */
   width: auto;
   height: 100%; 
   display: inline-block;
   border: 1px solid black;
   text-align: center;
   margin-top: 30px;
+  box-shadow: 5px 5px 8px gray;
   
 }
 
@@ -55,21 +44,22 @@ body{
 #dugme{
   position: relative;
   display: inline-block;
-  border-bottom: 1px dotted black;
+  box-shadow: 3px 3px 3px gray;
+
 }
 
 #za_lok{
   visibility: hidden;
-    width: 200px;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-    position: absolute;
-    z-index: 1;
-    letter-spacing: 1px;
-    font-size: 14px;
+  width: 200px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  letter-spacing: 1px;
+  font-size: 14px;
   
 }
 
@@ -86,7 +76,8 @@ body{
   color: black;
   border: 3px solid blue; 
   overflow-wrap: break-word; 
-  margin-top: 30px;
+  margin-top: 20px;
+  box-shadow: 8px 8px 10px gray;
 
 }
 
@@ -103,15 +94,14 @@ body{
   color: black;
   border: 3px solid blue; 
   overflow-wrap: break-word; 
-  margin-top: 30px;
-
+  margin-top: 20px;
+  box-shadow: 8px 8px 10px gray;
 }
 
 #dugme_flajer{
-  
   width: 200px;
   height: 45px;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
   box-shadow: 4px 4px 3px gray;
   margin: 10px;
@@ -119,24 +109,73 @@ body{
 
 #dugme_raniji{
 
-    width: 150px;
-    height: 50px;
-    font-size: 12px;
-    font-weight: bold;
-    box-shadow: 4px 4px 3px gray;
-    margin: 10px;
-    display: none;
-    position: absolute;
-    top: 300px;
-    left: 700px;
-    /* border: 2px solid green; */
-    background-color: cornsilk;
-    text-shadow: 1px 1px 2px green;
-    z-index: 100;
+  width: 150px;
+  height: 50px;
+  font-size: 12px;
+  font-weight: bold;
+  box-shadow: 4px 4px 3px gray;
+  margin: 10px;
+  display: none;
+  position: absolute;
+  top: 800px;
+  left: 550px;
+  background-color: rgb(236, 233, 221);
+  text-shadow: 1px 1px 2px green;
+  z-index: 100;
+     
   }
   #dugme_raniji:hover{
-    cursor: grab;
+  cursor: grab;
   }
+
+#dugme_svi_raniji{
+
+  width: 150px;
+  height: 50px;
+  font-size: 12px;
+  font-weight: bold;
+  box-shadow: 4px 4px 3px gray;
+  margin: 10px;
+  display: none;
+  position: absolute;
+  top: 800px;
+  left: 350px;
+  background-color: rgb(236, 233, 221);
+  text-shadow: 1px 1px 2px green;
+  z-index: 100;
+}
+
+#dugme_pocetna{
+  width: 150px;
+  height: 50px;
+  font-size: 12px;
+  font-weight: bold;
+  box-shadow: 4px 4px 3px gray;
+  margin: 10px;
+  display: none;
+  position: absolute;
+  top: 800px;
+  left: 750px;
+  background-color: rgb(236, 233, 221);
+  text-shadow: 1px 1px 2px green;
+  z-index: 100;
+}
+
+#dugme_ponovo{
+  width: 150px;
+  height: 50px;
+  font-size: 12px;
+  font-weight: bold;
+  box-shadow: 4px 4px 3px gray;
+  margin: 10px;
+  display: none;
+  position: absolute;
+  top: 800px;
+  left: 950px;
+  background-color: rgb(236, 233, 221);
+  text-shadow: 1px 1px 2px green;
+  z-index: 100;
+}
 
 #container_img{
   position: relative;
@@ -169,7 +208,6 @@ body{
   box-shadow: 7px 7px 6px rgb(77, 72, 72);
   border: 1px solid black;
 }  
-  
 
 #tabela{
   width: 100%;
@@ -180,7 +218,6 @@ body{
   width: 100%;
   
 }
-
 
 #tabela tr td{
   padding: 12px 15px;
@@ -232,6 +269,7 @@ textarea {
   height: 150px;
   
 }
+
 #krug img{
   border-radius: 50%;
   transition-property: transform;
@@ -240,6 +278,7 @@ textarea {
   height: 100px;
   padding: 10px;
 }
+
 #krug img:hover {
   transform: rotate(1000deg);
 }
